src/objects/System_Log__c.object
<CustomObject>
    <description>System log records created from Salesforce processes.</description>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Method__c</fullName>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <description>The Email address to which a notification was sent, if applicable. This is defined within SystemLoggerSettings.</description>
        <label>Email Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <description>The name of the flow from which the log event was generated.</description>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Stage__c</fullName>
        <label>Flow Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_URL__c</fullName>
        <description>The URL of the flow which generated the System Log Event.</description>
        <inlineHelpText>The URL of the flow which generated the System Log Event.</inlineHelpText>
        <label>Flow URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <description>The severity of the log message.</description>
        <inlineHelpText>The severity of the log message.</inlineHelpText>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warn</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logged_From__c</fullName>
        <description>What type of process logged this event?</description>
        <inlineHelpText>What type of process logged this event?</inlineHelpText>
        <label>Logged From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Pentaho</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Script</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The reported log message.</description>
        <inlineHelpText>The reported log message.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_Id__c</fullName>
        <description>The Id of the related Object for which the log message was generated.</description>
        <inlineHelpText>The Id of the related Object for which the log message was generated.</inlineHelpText>
        <label>Related Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_UserName__c</fullName>
        <description>The UserName (login name) of the running user when the log was generated.</description>
        <inlineHelpText>The UserName (login name) of the running user when the log was generated.</inlineHelpText>
        <label>Running UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User executing the process from which the log event was generated.</description>
        <inlineHelpText>The User executing the process from which the log event was generated.</inlineHelpText>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <label>Script Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this log record meets the criteria for sending an email notification. This is determined by the configuration of &amp;apos;SystemLoggerSetting&amp;apos; metadata records at runtime.</description>
        <inlineHelpText>Whether this log record meets the criteria for sending an email notification.</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>The stack trace when the log was generated.</description>
        <inlineHelpText>The stack trace when the log was generated.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Logged_From__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Log_Level__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>System  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <recordTypes>
        <fullName>Apex</fullName>
        <active>true</active>
        <label>Apex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flow</fullName>
        <active>true</active>
        <label>Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Script</fullName>
        <active>true</active>
        <label>Script</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>